# Face-Scape

./: Cargo.toml  Makefile  README.md
pam_facescape/: Cargo.toml
pam_facescape/src/: lib.rs
src/: main.rs
src/core/: auth_manager.rs  fourier_engine.rs  mod.rs  webcam_controller.rs
src/globals/: consts.rs  gamma_lut.rs  mod.rs
src/model/: cascade_classifier.rs  face_distance_model.rs  mod.rs
src/pipelines/: authenticate.rs  construct.rs  enroll.rs  mod.rs
