[workspace]
members = [
	"pam_facescape"
]

[package]
name = "face-scape"
version = "0.0.9"
edition = "2024"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
rustfft = "6.1"
ndarray = "0.17.2"
v4l = "0.14"
opencv = { version = "0.99", features = ["clang-runtime"] }
atomic-matrix = { path = "../atomic-matrix" }
bytemuck = "1.25"
clap = { version = "4.6", features = ["derive"] }
libc = "0.2"
